# ChangeLog for sci-biology/primerD
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jan 2015; Justin Lecher <jlec@gentoo.org> primerD-1.0.0.ebuild:
  Fix license

*primerD-1.0.0 (07 Jan 2015)

  07 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +primerD-1.0.0.ebuild, +metadata.xml:
  ebuild skeleton
