@@ -4,6 +4,8 @@
 
 EAPI=5
 
+inherit toolchain-funcs
+
 DESCRIPTION="Design degenerate primers"
 HOMEPAGE="http://mblab.wustl.edu/software.html"
 SRC_URI="http://mblab.wustl.edu/software/download/primerD.tar.gz -> primerD-1.0.tar.gz"
@@ -12,3 +14,14 @@ LICENSE="LGPL-2.1"
 SLOT="0"
 KEYWORDS=""
 IUSE=""
+
+S="${WORKDIR}"/primerD
+
+src_prepare(){
+	sed -e "s:CC=g++:CC=$(tc-getCXX):; s:-Wall -g:${CFLAGS}:" -i Makefile || die
+}
+
+src_install(){
+	dodoc README
+	dobin primerD
+}
