@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Feb 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  primerD-1.0.0.ebuild:
+  edit the bundled Makefile
+
   10 Jan 2015; Justin Lecher <jlec@gentoo.org> primerD-1.0.0.ebuild:
   Fix license
 
@@ -10,4 +14,3 @@
   07 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
   +primerD-1.0.0.ebuild, +metadata.xml:
   ebuild skeleton
-
